# claude-budget-guard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
budget_guard/: __init__.py  __main__.py  budget.py  config.py  hook.py  loops.py  pricing.py  transcript.py
tests/: test_budget.py  test_hook.py  test_loops.py  test_pricing.py  test_transcript.py
tests/fixtures/: dedup.jsonl  loop.jsonl  loop3.jsonl  malformed.jsonl
